--- a/roles/docker/tasks/images.yml
+++ b/roles/docker/tasks/images.yml
@@ -1,13 +1,10 @@
 ---
-- name: Pull MySQL server image from Docker Hub
+- name: Pull images from Docker Hub.
   docker_image:
-    name: mysql/mysql-server
-    tag: "5.7"
-- name: Pull Nginx image from Docker Hub
-  docker_image:
-    name: nginx
-    tag: "1.12"
-- name: Pull Python image from Docker Hub
-  docker_image:
-    name: python
-    tag: "3.6.2"
+    name: "{{ item.name }}"
+    tag: "{{ item.tag }}"
+  with_items:
+    - { name: "hello-world", tag: "latest" }
+    - { name: "mysql/mysql-server", tag: "5.7" }
+    - { name: "nginx", tag: "1.12" }
+    - { name: "python", tag: "3.6.2" }
