Add support for ssh and template

--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,6 +1,5 @@
 ---
-pip_download_dest: /tmp
-pip_version:
-python: python
-pip: pip
-pip_proxy: ''
+ssh_users:
+  - user: vagrant
+    key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
+quote: "Do not take life too seriously."
