--- a/roles/common/tasks/jinja.yml
+++ b/roles/common/tasks/jinja.yml
@@ -2,6 +2,5 @@
 - name: Fill out template
   template:
     src: templates/my.conf.j2
-    dest: /etc/my.conf
+    dest: /tmp/my.conf
     mode: 0644
-  become: true
