--- a/roles/common/tasks/install.yml
+++ b/roles/common/tasks/install.yml
@@ -8,8 +8,8 @@
     - git
     - curl
   become: true
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian" and exec_mode == "vm"
 - name: Remove dependencies that are no longer required.
   apt:
     autoremove: "yes"
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian" and exec_mode == "vm"
