--- a/roles/common/tasks/ssh.yml
+++ b/roles/common/tasks/ssh.yml
@@ -4,4 +4,4 @@
     user: vagrant
     state: present
     key: "{{ lookup('file', '~/.ssh/id_rsa.pub') }}"
-  when: ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian" and exec_mode == "vm"
