--- a/roles/docker/tasks/sudoless.yml
+++ b/roles/docker/tasks/sudoless.yml
@@ -6,9 +6,11 @@
     groups: docker
     append: "yes"
   become: true
+  when: ansible_os_family == "Debian" and exec_mode == "vm"
 - name: Restart docker systemd unit.
   systemd:
     name: docker
     state: restarted
     daemon_reload: "yes"
   become: true
+  when: ansible_os_family == "Debian" and exec_mode == "vm"
