--- a/roles/docker/tasks/sudoless.yml
+++ b/roles/docker/tasks/sudoless.yml
@@ -4,13 +4,13 @@
     name: vagrant
     group: vagrant
     groups: docker
-    append: "yes"
+    append: yes
   become: true
   when: ansible_os_family == "Debian" and exec_mode == "vm"
 - name: Restart docker systemd unit.
   systemd:
     name: docker
     state: restarted
-    daemon_reload: "yes"
+    daemon_reload: yes
   become: true
   when: ansible_os_family == "Debian" and exec_mode == "vm"
